<resources>
    <string name="app_name">ORunner</string>
    <string name="type_training">Training</string>
    <string name="type_competition">Competition</string>
    <string name="save_mode">Save</string>
    <string name="edit_mode">Edit</string>
    <string name="start_time">Start time</string>
    <string name="start_date">Start date</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="distance_km">Distance (km)</string>
    <string name="duration_hint">hh:mm:ss</string>
    <string name="controls">Controls</string>
    <string name="zero">0</string>
    <string name="zero_distance">0.00</string>
    <string name="zero_pace">00:00</string>
    <string name="unit_min_km">min/km</string>
    <string name="winning_time">Winning time</string>
    <string name="age_class">Class</string>
    <string name="position">Position</string>
    <string name="distance">Distance</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="create_account_now">Create account now.</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="map_photo">mapPhoto</string>
    <string name="add_map_btn">addMapBtn</string>
    <string name="save_activity">Save activity</string>
    <string name="no_activities">No activities</string>
    <string name="add_activity_hint">Add one by clicking the plus button.</string>
    <string name="frag_overview">Overview</string>
    <string name="more_details">More details</string>
    <string name="fileprovider_authorities">com.mponeff.orunner.fileprovider</string>
    <string name="trainings">Trainings</string>
    <string name="competitions">Competitions</string>
    <string name="activities">Activities</string>
    <string name="pace">Pace</string>
    <string name="duration">Duration</string>
    <string name="frag_history">History</string>
    <string name="frag_maps_archive">Maps archive</string>
    <string name="frag_month_reports">Month reports</string>
    <string name="this_month">This month</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="frag_profile">Profile</string>
</resources>
