<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_forest"
        android:scaleType="matrix"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_transparent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:src="@drawable/orienteering_symbol"
                android:scaleType="centerInside"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textSize="36sp"
                android:textColor="@color/mdtp_white"
                />

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                tools:text="Please fill all fields"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_ti_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android.support.design:hintAnimationEnabled="false"
                android.support.design:hintEnabled="false"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#DEFFFFFF"
                    android:textColorHint="#DEFFFFFF"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_ti_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android.support.design:hintAnimationEnabled="false"
                android.support.design:hintEnabled="false"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="#DEFFFFFF"
                    android:textColor="#DEFFFFFF"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                style="@style/AppButton"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/not_registered_yet"
                android:textColor="@color/mdtp_white"
                />

            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/create_account_now"
                android:textColor="@color/fui_linkColor"
                android:clickable="true"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="2">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="@color/mdtp_neutral_pressed"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/or"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:textColor="#DEFFFFFF"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="@color/mdtp_neutral_pressed"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/googleg_disabled_color_18"
                android:drawableStart="@drawable/googleg_disabled_color_18"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:clickable="true"
                android:text="@string/sign_in_with_google"
                android:textAllCaps="false"
                style="@style/AppButton"
                />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>

