<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_forest"
        android:scaleType="matrix"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_transparent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:src="@drawable/orienteering_symbol"
                android:scaleType="centerInside"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textSize="36sp"
                android:textColor="@color/mdtp_white"
                />

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                tools:text="Please fill all fields"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_ti_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android.support.design:hintAnimationEnabled="false"
                android.support.design:hintEnabled="false"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_account"
                    android:drawableStart="@drawable/ic_account"
                    android:drawablePadding="8dp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="#DEFFFFFF"
                    android:textColorHint="#DEFFFFFF"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_ti_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android.support.design:hintAnimationEnabled="false"
                android.support.design:hintEnabled="false"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#DEFFFFFF"
                    android:textColorHint="#DEFFFFFF"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_ti_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android.support.design:hintAnimationEnabled="false"
                android.support.design:hintEnabled="false"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="#DEFFFFFF"
                    android:textColor="#DEFFFFFF"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_next"
                android:clickable="true"
                android:text="@string/sign_up"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textColor="@color/mdtp_white"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

