<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mdtp_white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"
            />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <!-- Date time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    tools:text="26-SEP-2016"
                    style="@style/SaveActivityEditText"
                    />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    tools:text="12:00"
                    style="@style/SaveActivityEditText"
                    />

            </LinearLayout>

            <!-- Divider -->
            <View
                style="@style/HorizontalViewDivider"
                />

            <!-- Title location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:layout_marginBottom="0dp"
                        style="@style/SaveActivityViewTitle"
                        />

                    <!-- Title -->
                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        style="@style/SaveActivityEditText"
                        tools:text="Title"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:layout_marginBottom="0dp"
                        style="@style/SaveActivityViewTitle"
                        />

                    <!-- Location -->
                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textAllCaps="false"
                        style="@style/SaveActivityEditText"
                        tools:text="Location"
                        />
                </LinearLayout>
            </LinearLayout>

            <!-- Divider -->
            <View
                style="@style/HorizontalViewDivider"
                />

            <!-- Distance duration -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        style="@style/SaveActivityViewTitle"
                        />

                    <TextView
                        android:id="@+id/tv_distance"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        tools:text="0"
                        style="@style/SaveActivityEditText"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        style="@style/SaveActivityViewTitle"
                        />

                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="00:00:00"
                        style="@style/SaveActivityEditText"
                        />
                </LinearLayout>
            </LinearLayout>

            <!-- Divider -->
            <View
                style="@style/HorizontalViewDivider"
                />

            <!-- Pace controls-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="true">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/controls"
                        style="@style/SaveActivityViewTitle"
                        />

                    <TextView
                        android:id="@+id/tv_controls"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        tools:text="0"
                        style="@style/SaveActivityEditText"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pace"
                        style="@style/SaveActivityViewTitle"
                        />

                    <TextView
                        android:id="@+id/tv_pace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="00:00"
                        style="@style/SaveActivityEditText"
                        />

                </LinearLayout>
            </LinearLayout>

            <!-- Divider -->
            <View
                style="@style/HorizontalViewDivider"
                />

            <LinearLayout
                android:id="@+id/ll_winning_time_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age_class"
                        style="@style/SaveActivityViewTitle"
                        />

                    <TextView
                        android:id="@+id/tv_class"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textIsSelectable="true"
                        tools:text="M21E"
                        style="@style/SaveActivityEditText"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/winning_time"
                        style="@style/SaveActivityViewTitle"
                        />

                    <TextView
                        android:id="@+id/tv_winning_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:maxLength="8"
                        tools:text="-"
                        style="@style/SaveActivityEditText"
                        />

                </LinearLayout>
            </LinearLayout>

            <!-- Divider -->
            <View
                android:id="@+id/horizontal_divider_competition_1"
                android:visibility="gone"
                style="@style/HorizontalViewDivider"
                />

            <!-- Position -->
            <LinearLayout
                android:id="@+id/ll_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position"
                    style="@style/SaveActivityViewTitle"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="32"
                        style="@style/SaveActivityEditText"
                        />

                    <TextView
                        android:id="@+id/tv_time_diff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="0dp"
                        tools:text="+00:02:12"
                        style="@style/SaveActivityViewTitle"
                        />
                </LinearLayout>
            </LinearLayout>

            <!-- Divider -->
            <View
                android:id="@+id/horizontal_divider_competition_2"
                android:visibility="gone"
                style="@style/HorizontalViewDivider"
                />

            <!-- Map view -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Map"
                    style="@style/SaveActivityViewTitle"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_no_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No map for this activity"
                        android:fontFamily="sans-serif-smallcaps"
                        android:textSize="12sp"
                        />
                    <ImageView
                        android:id="@+id/iv_map"
                        android:layout_width="196dp"
                        android:layout_height="196dp"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/map_photo"
                        android:focusableInTouchMode="false"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        />

                    <ProgressBar
                        android:id="@+id/pb_load_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        />

                </RelativeLayout>
            </LinearLayout>

            <!-- Divider -->
            <View style="@style/HorizontalViewDivider"
                />

            <!-- Details -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Details"
                    style="@style/SaveActivityViewTitle"
                    />
                <TextView
                    android:id="@+id/tv_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="1"
                    android:maxLines="8"
                    android:textIsSelectable="true"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-smallcaps"
                    tools:text="No details"
                    />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>